feat: add pagination to user module for responses with multiple objects